<resources>
    <string name="app_name">Jira Board</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Jira Board</string>

    <!-- Strings related to onLoginRequested -->
    <string name="prompt_email">Email/Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="jira_sub_domain">sub-domain</string>
    <string name="error_invalid_subdomain"/>
    <string name="login_to_jira_cloud">Login to Jira Cloud</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="please_select_a_project">Please select a project</string>
    <string name="issue_types">Issue Types</string>
    <string name="explored">Explored?</string>
    <string name="action">Action</string>
    <string name="workflows">Workflows</string>
    <string name="jira_ticket_key">Please enter ticket key</string>
    <string name="discover">Discover</string>
    <string name="cancel">Cancel</string>
    <string name="workflow_discovery">Workflow Discovery</string>
    <string name="enter_ticket_key_for_discover" formatted="false"><![CDATA[
        Please create a new ticket of type <font color="#303F9F"><b>"%s"</b></font> in the project <font color="#303F9F"><b>"%s"</b></font> and enter its number in the following field
    ]]></string>
    <string name="invalid_issue_key">Invalid issue key</string>
    <string name="invalid_issue_type" formatted="false"><![CDATA[
        Invalid issue type, expected <b>%s</b> but found <b>%s</b>
    ]]></string>
    <string name="discovery_ticket_confirmation" formatted="false"><![CDATA[
        Are you sure you want to start discovering the Workflow for the ticket <font color="#303F9F"><b>%s</b></font> in project <font color="#303F9F"><b>%s</b></font>.<br>
        Given that this will lead to continuously changing the state of the ticket for the next 5 minutes?
    ]]></string>
    <string name="confirm_discovery">Confirm workflow-discovery ticket</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_menu_board">Board</string>
    <string name="bottom_menu_tickets">Tickets</string>
    <string name="bottom_menu_statuses">Statuses</string>
    <string name="bottom_menu_workflow">Workflow</string>
    <string name="search_hit">Type ticket number or search text</string>
    <string name="err_msg_unknown_error">Unknown error occurred, please try again</string>
    <string name="no_results_found">No results found</string>
    <string name="title_activity_printing">PrintingActivity</string>
    <string name="issue_description">Description</string>
    <string name="issue_assignee">Assignee</string>
    <string name="issue_project">Project</string>
    <string name="issue_type">Issue Type</string>
    <string name="issue_priority">Priority</string>
    <string name="issue_reporter">Reporter</string>
    <string name="issue_labels">Labels</string>
    <string name="issue_components">Components</string>
    <string name="issue_fix_version">Fix Version(s)</string>
    <string name="issue_affects_version">Affect Version(s)</string>
    <string name="issue_updated">Updated at</string>
    <string name="issue_created">Create at</string>
    <string name="issue_status">Status</string>
    <string name="none">None</string>
    <string name="tap_for_details">Tap to view details</string>
    <string name="title_activity_transitions">TransitionsActivity</string>
    <string name="direct_transitions">Direct transitions</string>
    <string name="further_transitions">Further transitions</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_transition_steps_text">The following transitions will be performed</string>
    <string name="confirm_issue_transition_title">Confirm issue transition</string>
    <string name="no_transitions_available_for_your_user">This ticket cannot be moved to any other state with your currently logged in user.</string>
    <string name="ticket_transition">Transition</string>
    <string name="action_print">Print</string>
</resources>
