<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/workflow_discovery"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/please_enter_ticket_id_for_discovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/project_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MOB-"
                android:textColor="#333"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/ticket_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/jira_ticket_key"
                android:inputType="number"
                android:maxLines="1"
                android:minWidth="100dp"
                android:singleLine="true"
                android:textColor="#333"
                android:textSize="16sp"
                />

        </LinearLayout>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/dialog_error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:padding="16dp"
        android:textColor="@color/errorRed"
        android:textSize="16sp"
        android:visibility="gone"/>

    <io.github.yuweiguocn.lib.squareloading.SquareLoading
        android:id="@+id/dialog_loader"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        app:dividerSize="2dp"
        app:squareColor="@color/colorPrimaryDark"
        app:squareCorner="2dp"
        app:squareSize="12dp"
        app:xCount="5"
        app:yCount="3"
        />

    <LinearLayout
        android:id="@+id/ticket_key_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/discover_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/discover"/>

    </LinearLayout>

</LinearLayout>