<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            >

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                >

                <FrameLayout
                    android:id="@+id/main.framelayout.title"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    app:layout_collapseMode="none"
                    >

                    <LinearLayout
                        android:id="@+id/main.linearlayout.title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:id="@+id/issue_summary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="bottom|left"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            />
                    </LinearLayout>
                </FrameLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin">
                    <TextView
                        android:gravity="center_vertical|left"
                        android:id="@+id/title"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_weight="0"
                        android:gravity="center">

                        <android.support.v7.widget.AppCompatImageView
                            android:id="@+id/issue_type_icon"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/issue_key"
                        style="@style/DatkText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"/>
                </LinearLayout>

                <org.sufficientlysecure.htmltextview.HtmlTextView
                    android:id="@+id/issue_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textAppearance="@android:style/TextAppearance.Small"/>

                <LinearLayout
                    android:id="@+id/section_assignee"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_weight="0"
                        android:gravity="center">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/assignee_image"
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >

                        <TextView
                            style="@style/IssueSection"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/issue_assignee"/>

                        <TextView
                            style="@style/DatkText"
                            android:id="@+id/issue_assignee"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            />

                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/section_project"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:gravity="center"
                        android:layout_weight="0">

                        <android.support.v7.widget.AppCompatImageView
                            android:id="@+id/project_icon"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >

                        <TextView
                            style="@style/IssueSection"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/issue_project"/>

                        <TextView
                            android:id="@+id/project"
                            style="@style/DatkText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    style="@style/IssueSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/issue_type"/>

                <TextView
                    style="@style/IssueSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/issue_priority"/>

                <TextView
                    style="@style/IssueSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/issue_reporter"/>

                <TextView
                    style="@style/IssueSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/issue_labels"/>

                <TextView
                    style="@style/IssueSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/issue_components"/>

                <TextView
                    style="@style/IssueSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/issue_fix_version"/>

                <TextView
                    style="@style/IssueSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/issue_affects_version"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_print_status"
            android:tint="@color/white"
            app:behavior_autoHide="false"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|right|end"
            />

        <include layout="@layout/bottom_sheet_webview"/>
    </android.support.design.widget.CoordinatorLayout>


    <include layout="@layout/loader_view"/>
</FrameLayout>